--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "main": "build/index.js",
   "type": "module",
+  "engines": {
+    "node": "18.12.0"
+  },
   "scripts": {
     "build": "tsc",
     "build:dev": "tsc -w",
