--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.14",
+    "@types/morgan": "^1.9.3",
     "@typescript-eslint/eslint-plugin": "^5.42.0",
     "@typescript-eslint/parser": "^5.42.0",
     "eslint": "^8.26.0",
@@ -26,5 +28,10 @@
     "eslint-config-xo-typescript": "^0.53.0",
     "typescript": "^4.8.4",
     "husky": "^8.0.0"
+  },
+  "dependencies": {
+    "chalk": "^5.1.2",
+    "express": "^4.18.2",
+    "morgan": "^1.10.0"
   }
 }
