--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
     "@types/morgan": "^1.9.3",
     "@typescript-eslint/eslint-plugin": "^5.42.0",
     "@typescript-eslint/parser": "^5.42.0",
+    "dotenv": "^16.0.3",
     "eslint": "^8.26.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-xo": "^0.42.0",
     "eslint-config-xo-typescript": "^0.53.0",
-    "typescript": "^4.8.4",
-    "husky": "^8.0.0"
+    "husky": "^8.0.0",
+    "typescript": "^4.8.4"
   },
   "dependencies": {
     "chalk": "^5.1.2",
